# reflexio

./: .coderabbit.yaml  .env.example  .gitignore  BONANZA_README.md  README.md  developer.md  pyproject.toml  run_services.sh
benchmark/: .gitignore  README.md  RESULTS.md  __init__.py  evaluation.py  report.py  run_benchmark.py  task_loader.py  tokens.py
benchmark/adapters/: __init__.py  base.py  hermes_adapter.py  openspace_adapter.py
benchmark/gdpval/: EXPERIMENT_PLAN.md  README.md  RESULTS.md  __init__.py  config.py  evaluation.py  run_benchmark.py  task_loader.py  tokens.py
benchmark/gdpval/adapters/: base.py  hermes_adapter.py  openspace_adapter.py
benchmark/gdpval/memory/: __init__.py  injection.py  prompt_variants.py  reflexio_bridge.py
benchmark/gdpval/tests/: test_adapters.py
benchmark/memory/: injection.py  reflexio_bridge.py
benchmark/tests/: test_adapters.py
client_dist/: README.md  pyproject.toml
docs/: README.md  package-lock.json  package.json
docs/components/configure/: sections.tsx
docs/lib/methods/: agent-playbooks.ts  user-playbooks.ts
notebooks/: 00_quickstart.ipynb  03_playbook.ipynb  README.md  _display_helpers.py
reflexio/: README.md  __init__.py
reflexio/benchmarks/: __init__.py
reflexio/benchmarks/retrieval_latency/: README.md  __init__.py  backends.py  bench.py  embed_cache.py  report.py  scenarios.py  seed.py
reflexio/benchmarks/retrieval_latency/results/: report.md  results.json
reflexio/cli/: README.md  bootstrap_config.py  env_loader.py  errors.py  output.py
reflexio/cli/commands/: agent_playbooks.py  config_cmd.py  doctor.py  interactions.py  profiles.py  services.py  setup_cmd.py  shortcuts.py  user_playbooks.py
reflexio/client/: cache.py  client.py
reflexio/integrations/claude_code/: README.md
reflexio/integrations/claude_code/hook/: HOOK.md  handler.js  search_hook.js
reflexio/integrations/claude_code/rules/: reflexio.md
reflexio/integrations/claude_code/skill/: SKILL-expert.md  SKILL.md
reflexio/integrations/langchain/: README.md  retriever.py
reflexio/integrations/openclaw/: .clawhubignore  .gitignore  README.md  TESTING.md  package-lock.json  package.json  publish_clawhub.sh  tsconfig.json  vitest.config.ts
reflexio/integrations/openclaw-embedded/: .gitignore  README.md  SKILL.md  TESTING.md  index.ts  package-lock.json  package.json
reflexio/integrations/openclaw-embedded/agents/: reflexio-consolidator.md  reflexio-extractor.md
reflexio/integrations/openclaw-embedded/hook/: HOOK.md  handler.js  handler.ts  package-lock.json  package.json  smoke-test.js  smoke-test.ts
reflexio/integrations/openclaw-embedded/plugin/: README.md  _meta.json  index.ts  openclaw.plugin.json  package.json
reflexio/integrations/openclaw-embedded/prompts/: README.md  full_consolidation.md  playbook_extraction.md  profile_extraction.md  shallow_dedup_pairwise.md
reflexio/integrations/openclaw-embedded/references/: architecture.md  future-work.md  porting-notes.md
reflexio/integrations/openclaw-embedded/scripts/: install.sh  package-lock.json  package.json  reflexio-write.sh  reflexio.ts  tsconfig.json  uninstall.sh
reflexio/integrations/openclaw-embedded/tests/: consolidate.test.ts  dedup.test.ts  io.test.ts  search.test.ts  smoke-test.ts  test_reflexio_write.bats  write-playbook.test.ts  write-profile.test.ts
reflexio/integrations/openclaw-embedded/types/: openclaw.d.ts
reflexio/integrations/openclaw/eval/: README.md  runner.py
reflexio/integrations/openclaw/hook/: HOOK.md  handler.js  handler.ts  package-lock.json  package.json
reflexio/integrations/openclaw/plugin/: index.ts  openclaw.plugin.json  package.json
reflexio/integrations/openclaw/references/: HOOK.md
reflexio/integrations/openclaw/rules/: reflexio.md
reflexio/integrations/openclaw/scripts/: install.sh  uninstall.sh
reflexio/integrations/openclaw/skill/: SKILL.md
reflexio/integrations/openclaw/tests/: publish.test.ts  search.test.ts  server.test.ts  setup.test.ts  sqlite-buffer.test.ts  (+1 more)
reflexio/lib/: __init__.py  _agent_playbook.py  _base.py  _generation.py  _profiles.py  _user_playbook.py
reflexio/models/: config_schema.py
reflexio/models/api_schema/: common.py  retriever_schema.py  validators.py
reflexio/server/: README.md  __init__.py  api.py  correlation.py
reflexio/server/api_endpoints/: publisher_api.py
reflexio/server/llm/: __init__.py  litellm_client.py  model_defaults.py  tools.py
reflexio/server/services/: base_generation_service.py  deduplication_utils.py  generation_service.py  unified_search_service.py
reflexio/server/site_var/: README.md
reflexio/test_support/: llm_mock.py  llm_model_registry.py
scripts/: reset_db.py
tests/: conftest.py
tests/benchmarks/: baseline.json  test_retrieval_latency_smoke.py
tests/cli/: test_bootstrap_config.py  test_commands.py  test_config_cmd.py  test_output.py  test_setup_cmd.py
tests/client/: test_cache.py
tests/e2e_tests/: conftest.py  test_knowledge_gap_real_llm.py  test_openclaw_integration.py  test_playbook_workflows.py  test_profile_workflows.py
tests/eval/: aggregate.py  conftest.py  judge.py  test_agentic_vs_classic_extraction_integration.py  test_agentic_vs_classic_search_integration.py  test_aggregate.py  test_judge_unit.py
tests/eval/judge_prompts/: extraction_rubric.yaml  search_rubric.yaml
tests/fixtures/llm/: playbook_aggregation.json  playbook_extraction.json
tests/lib/: test_generation_unit.py  test_profiles_unit.py  test_user_playbook_unit.py
tests/models/: test_view_models.py
tests/models/api_schema/: test_domain_entities.py  test_retriever_schema.py
tests/server/api_endpoints/: test_api_routes.py
tests/server/llm/: test_claude_code_provider.py  test_litellm_client_tool_calls.py  test_litellm_client_unit.py  test_local_embedding_provider.py  test_model_defaults.py  test_model_roles.py  test_tools.py
tests/server/services/: test_agentic_backend_pipeline_integration.py  test_base_generation_service.py  test_generation_service_dispatcher.py  test_prompt_model_mapping.py
tests/test_data/: contradiction_scenarios.json
(+133 files in other folders)
