[project]
name = "reflexio-client"
version = "0.2.2"
description = "Lightweight Python client for the Reflexio API"
authors = [{name = "Reflexio Team"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0.0",
    "requests>=2.25.0",
    "aiohttp>=3.12.9",
    "python-dateutil>=2.8.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "reflexio/__init__.py",
    "reflexio/client/**",
    "reflexio/models/**",
    "reflexio/integrations/**",
]

[tool.hatch.build.targets.wheel]
packages = ["reflexio"]
